# util_archive

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  util_archive.sln
include/: game_mount_info.hpp  hlarchive.hpp  util_archive.hpp  util_vdf.hpp
src/: archive_data.cpp  archive_data.hpp  hlarchive.cpp  main.cpp  util_archive.cpp  util_archive.cppm  util_vdf.cpp
src/implementation/: archive.cpp  archive_data.cpp  archive_data.cppm  definitions.hpp  hlarchive.cpp  main.cpp  vdf.cpp
src/interface/: game_mount_info.cppm  hlarchive.cppm  vdf.cppm
util_archive/: util_archive.vcxproj  util_archive.vcxproj.filters
